--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@radix-ui/react-tabs": "^1.1.13",
     "clsx": "^2.1.1",
+    "emailjs-com": "^3.2.0",
     "lucide-react": "^0.548.0",
     "motion": "^12.23.24",
     "react": "^19.1.1",
